import React from 'react';
import ReactDOM from 'react-dom';
import renderer from 'react-test-renderer'
import Enzyme, { shallow } from 'enzyme';
import Adapter from 'enzyme-adapter-react-16';
import App, { Search, Button, Table } from './App';


Enzyme.configure({adapter: new Adapter()});

describe('App', () => {

    it('renders without crashing', () => {
      const div = document.createElement('div');
      ReactDOM.render(<App />, div);
      ReactDOM.unmountComponentAtNode(div);
    });

    test('has a valid snapshot', () => {
        const component = renderer.create(
            <App/>
        );
        let tree = component.toJSON();
        expect(tree).toMatchSnapshot();
    });

});

describe('Search', ()=> {
    it('renders without crashing', () => {
        const div = document.createElement('div');
        ReactDOM.render(<Search>Search</Search>, div);
        ReactDOM.unmountComponentAtNode(div);
    });

    test('has valid snapshot', () => {
        const component = renderer.create(
            <Search>Search</Search>
        );
        let tree =component.toJSON();
        expect(tree).toMatchSnapshot();
    });
});


describe('Button', () => {
    it('renders without crashing', () => {
        const div = document.createElement('div');
        ReactDOM.render(<Button>Give Me More</Button>, div);
        ReactDOM.unmountComponentAtNode(div);
    });

    it('has valid html', () => {
      const element = shallow(<Button>Click me</Button>);
      expect(element.html()).toEqual('<button class="" type="submit">Click me</button>');
    });

    // TODO
    // find a way to test if it fetches the data onClick

    test('has valid snapshot', () => {
        const component = renderer.create(
            <Button>Give Me More</Button>
        );
        let tree = component.toJSON();
        expect(tree).toMatchSnapshot();
    });
});


describe('Table', () => {
    const props = {
        list: [
            { title: '1', author: '1', num_comments: 1, points: 2, objectID: 'y' },
            { title: '2', author: '2', num_comments: 1, points: 2, objectID: 'z' },
        ],
        sortKey: 'TITLE',
        isSortReverse: false,
    }

    it('renders without crashing', () => {
        const div = document.createElement('div');
        ReactDOM.render(<Table onDismiss={() => console.log('dismissed')} {...props}/>, div);
        ReactDOM.unmountComponentAtNode(div);
    });

    it('shows two items in list', () => {
      const element = shallow(
        <Table onDismiss={() => console.log('dismissed')} {...props} />
      );
      expect(element.find('.table-row').length).toBe(2);
    });

    test('has a valid snapshot', () => {
        const component = renderer.create(
            <Table onDismiss={() => console.log('dismissed')} {...props}/>
        );
        let tree = component.toJSON();
        expect(tree).toMatchSnapshot();
    });
});
