// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        className=""
        onClick={undefined}
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <div>
          <button
            className="button-inline"
            onClick={[Function]}
            type="submit"
          >
            Title
          </button>
          
        </div>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <div>
          <button
            className="button-inline"
            onClick={[Function]}
            type="submit"
          >
            author
          </button>
          
        </div>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <div>
          <button
            className="button-inline"
            onClick={[Function]}
            type="submit"
          >
            Comments
          </button>
          
        </div>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <div>
          <button
            className="button-inline"
            onClick={[Function]}
            type="submit"
          >
            Points
          </button>
          
        </div>
      </span>
      <span
        style={
          Object {
            "width": "10% ",
          }
        }
      >
        Archive
      </span>
    </div>
  </div>
  <div
    className="interactions"
  >
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`Button has valid snapshot 1`] = `
<button
  className=""
  onClick={undefined}
  type="submit"
>
  Give Me More
</button>
`;

exports[`Search has valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  <input
    onChange={undefined}
    type="text"
    value={undefined}
  />
  <button
    className=""
    onClick={undefined}
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <div>
        <button
          className="button-inline button-active"
          onClick={[Function]}
          type="submit"
        >
          Title
        </button>
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="19"
            y2="5"
          />
          <polyline
            points="5 12 12 5 19 12"
          />
        </svg>
      </div>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <div>
        <button
          className="button-inline"
          onClick={[Function]}
          type="submit"
        >
          author
        </button>
        
      </div>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <div>
        <button
          className="button-inline"
          onClick={[Function]}
          type="submit"
        >
          Comments
        </button>
        
      </div>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <div>
        <button
          className="button-inline"
          onClick={[Function]}
          type="submit"
        >
          Points
        </button>
        
      </div>
    </span>
    <span
      style={
        Object {
          "width": "10% ",
        }
      }
    >
      Archive
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "35%",
        }
      }
    >
      <a
        href={undefined}
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "25%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className=""
        onClick={[Function]}
        type="submit"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "35%",
        }
      }
    >
      <a
        href={undefined}
      >
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "25%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className=""
        onClick={[Function]}
        type="submit"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
